[package]

name = "rustiny"
version = "0.0.1"
authors = ["Markus Siemens <siemens1993@gmail.com>"]

[[bin]]
name = "rustiny"
doc = false
test = false

[[bin]]
name = "rustiny-rulecomp"
doc = false
test = false

[profile.release]
opt-level = 3
lto = true

[dependencies]
ansi_term = "^0.12.1"
clippy = "*"
clap = "^2.33.3"
env_logger = "^0.8.2"
lazy_static = "^1.4.0"
log = "^0.4.11"
term = "^0.6.1"
itertools = "0.10.3"

[dev-dependencies]
pretty_assertions = "0.3.4"
